--- a/src/components/TaskTable/TaskTable.css
+++ b/src/components/TaskTable/TaskTable.css
@@ -1,5 +1,5 @@
 .tasktable{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: calc(100% - 32px);
 }
